# look

./: .gitignore  DEVELOPMENT.md  Makefile.mac  Makefile.win  README.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci-nix.yml  ci.yml  release-linux.yml  reusable-release-macos.yml
apps/linows/: BUILDING.md  DESIGN.md  FEATURES.md  FUNCTIONS.md  PLAN-SHELL-SEARCH.md  README.md  TASKS.md  WINDOWS.md  flake.nix
apps/linows/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/linows/src-tauri/capabilities/: default.json
apps/linows/src-tauri/src/: autostart.rs  calc.rs  clipboard.rs  commands.rs  files.rs  linux_gnome_ext.rs  linux_wayland_shortcut.rs  linux_window_focus.rs  main.rs  music.rs  platform.rs  process.rs  state.rs  sysinfo.rs  todo.rs  translate.rs
apps/linows/src-tauri/src/gnome-shell-extension/: extension.js  metadata.json
apps/linows/src-tauri/src/highlight/: html.rs  lang.rs  mod.rs  tokenizer.rs
apps/linows/src-tauri/src/platform/: mod.rs  shared.rs
apps/linows/src-tauri/src/platform/linux/: autostart.rs  clipboard.rs  gnome_ext.rs  icons.rs  mod.rs  process.rs  window_focus.rs  wm.rs
apps/linows/src-tauri/src/platform/windows/: autostart.rs  clipboard.rs  effects.rs  known_folders.rs  mod.rs  process.rs  version.rs  window_focus.rs
bridge/ffi/src/: lib.rs  (+1 more)
docs/: architecture.md  features.md  tasks.md  user-guide.md
scripts/linux/: build-appimage.sh
tools/perf/: Cargo.toml  WATCHER_PERF.md  query_engine_bench.rs  real_fs_stress.rs  scoped_refresh_bench.rs  watcher_stress.rs
(+106 files in other folders)
